[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "konacrawler"
version = "0.0.1"
authors = [
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "parsel"
    "aiohttp"
]